🚀 Prepare for web

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,10 +5,13 @@
     "allowJs": true,
     "esModuleInterop": true,
     "jsx": "react-native",
-    "lib": ["DOM", "ESNext"],
+    "lib": [
+      "DOM",
+      "ESNext"
+    ],
     "moduleResolution": "node",
     "noEmit": true,
     "resolveJsonModule": true,
-    "target": "ESNext",
+    "target": "ESNext"
   }
 }
